feat: add images

--- a/index.html
+++ b/index.html
@@ -8,35 +8,79 @@
 </head>
 <body>
     <header>
-        <h1>Sistema de Renovação Mental</h1>
-        <h2>10 Minutos por Dia para Renovar Sua Mentalidade</h2>
+        <div class="hero-container">
+            <img src="assets/header.png" alt="Paisagem serena representando renovação mental" class="hero-image">
+            <div class="hero-text">
+                <h1>Sistema de Renovação Mental</h1>
+                <h2>10 Minutos por Dia para Renovar Sua Mentalidade</h2>
+            </div>
+        </div>
     </header>
 
     <main>
-        <p><strong>Descubra como pequenos ajustes diários podem liberar um potencial extraordinário dentro de você, trazendo mais alegria e eficiência com a prática simples da gratidão.</strong></p>
+        <section class="main-content">
+            <h2>Descubra o Poder da Gratidão em Apenas 10 Minutos por Dia</h2>
+            
+            <p>Você já se perguntou por que algumas pessoas parecem sempre estar de bem com a vida, satisfeitas e alegres, enquanto outras lutam para encontrar felicidade em suas rotinas diárias? Imagine acordar a cada manhã com uma sensação renovada de propósito e clareza, sentindo-se mais produtivo e feliz antes mesmo de tomar seu café. Parece um sonho distante? Não precisa ser.</p>
 
-        <a href="#" class="cta-button">QUERO TRANSFORMAR MINHA VIDA AGORA!</a>
+            <p>A chave para transformar sua vida não está em mudanças radicais ou em sacrifícios diários. Está em algo tão simples quanto o reconhecimento das pequenas bênçãos. Estudos comprovam que a gratidão pode aumentar a liberação de hormônios da felicidade, como a dopamina e a serotonina, criando um ciclo de bem-estar que se reflete em todas as áreas da sua vida. Mas como integrar essa prática sem alterar drasticamente sua rotina já tão cheia?</p>
 
-        <section>
-            <h2>Você já se perguntou por que algumas pessoas parecem sempre estar de bem com a vida?</h2>
-            <p>Imagine acordar a cada manhã com uma sensação renovada de propósito e clareza, sentindo-se mais produtivo e feliz antes mesmo de tomar seu café. Parece um sonho distante? Não precisa ser.</p>
-            <p>A chave para transformar sua vida não está em mudanças radicais ou em sacrifícios diários. Está em algo tão simples quanto o reconhecimento das pequenas bênçãos.</p>
+            <div class="highlight-box-with-image">
+                <div class="highlight-image">
+                    <img src="assets/meio.png" alt="Pessoa feliz e produtiva" class="content-image">
+                </div>
+                <div class="highlight-text">
+                    <p>Imagine dedicar apenas 10 minutos por dia para renovar completamente sua mentalidade. Não se trata de virar sua vida de cabeça para baixo, mas de um compromisso simples e eficaz.</p>
+                </div>
+            </div>
+
+            <p>Com este método, você começará a perceber uma mudança em sua percepção, onde desafios se transformam em oportunidades e cada pequeno momento é uma chance de crescimento e gratidão.</p>
+
+            <h3>Apresentamos a você "10 Minutos por Dia para Renovar Sua Mentalidade"</h3>
+
+            <p>Este guia prático e transformador foi projetado para encaixar-se perfeitamente em sua rotina diária, sem exigir que você reescreva sua agenda. Em apenas 30 dias, você aprenderá a incorporar exercícios de gratidão que aumentam sua produtividade e felicidade, utilizando ferramentas comprovadas e fáceis de seguir.</p>
+
+            <p>Este livro não é apenas uma leitura, mas uma experiência que convida você a embarcar em uma jornada de autodescoberta e transformação pessoal.</p>
+
+            <div class="cta-container">
+                <a href="#" class="cta-button">QUERO TRANSFORMAR MINHA VIDA AGORA!</a>
+            </div>
+
+            <div class="benefits">
+                <h3>O que você vai descobrir neste e-book:</h3>
+                <ul>
+                    <li><strong>Descubra o Segredo dos Altamente Produtivos:</strong> Aprenda a técnica que líderes de sucesso usam para dobrar sua produtividade com apenas 10 minutos diários de prática.</li>
+                    <li><strong>Transforme o Estresse em Energia Positiva:</strong> Experimente a sensação de paz interior ao converter pressões diárias em oportunidades de crescimento através da gratidão.</li>
+                    <li><strong>Torne-se um Ímã de Oportunidades:</strong> Descubra como a prática da gratidão pode abrir portas inesperadas em sua carreira e vida pessoal.</li>
+                    <li><strong>Crie Relacionamentos Inquebráveis:</strong> Desenvolva conexões mais profundas e significativas, aprendendo a expressar gratidão de maneira genuína e impactante.</li>
+                    <li><strong>Aumente sua Resiliência Mental:</strong> Fortaleça sua capacidade de enfrentar desafios com serenidade e otimismo, mesmo em tempos de incerteza.</li>
+                    <li><strong>Desperte sua Criatividade Adormecida:</strong> Veja como a gratidão pode liberar seu potencial criativo, inspirando soluções inovadoras para problemas antigos.</li>
+                    <li><strong>Experimente a Alegria Diária:</strong> Sinta a felicidade genuína em pequenos momentos cotidianos que antes passavam despercebidos.</li>
+                    <li><strong>Melhore sua Saúde Física e Mental:</strong> Estudos mostram que a gratidão pode reduzir a pressão arterial e melhorar a qualidade do sono – veja os resultados rapidamente!</li>
+                    <li><strong>Conquiste seus Sonhos sem Sacrifícios Drásticos:</strong> Alcance suas metas mais audaciosas com pequenos ajustes em sua mentalidade, sem alterar radicalmente sua rotina.</li>
+                    <li><strong>Descubra o Seu Propósito Verdadeiro:</strong> Encontre clareza e significado em sua vida, identificando o que realmente importa e direcionando seu foco para o que traz satisfação.</li>
+                </ul>
+            </div>
+
+            <p>Não importa se você é um estudante atarefado, um profissional ocupado ou alguém simplesmente buscando equilíbrio; este método se adapta à sua vida, não o contrário.</p>
+
+            <div class="highlight-box">
+                <p>Esqueça a ideia de que a felicidade está fora de alcance ou que a produtividade exige sacrifícios impossíveis.</p>
+            </div>
+
+            <p>Com "10 Minutos por Dia para Renovar Sua Mentalidade", você descobrirá que a mudança está ao seu alcance, esperando para ser ativada. Permita-se explorar o poder da gratidão e sinta a diferença em todas as áreas da sua vida, provando que grandes transformações começam com pequenos passos diários.</p>
         </section>
 
-        <section class="benefits">
-            <h2>O que você vai descobrir neste e-book:</h2>
-            <div class="benefit-item">✅ O Segredo dos Altamente Produtivos</div>
-            <div class="benefit-item">✅ Como Transformar Estresse em Energia Positiva</div>
-            <div class="benefit-item">✅ Técnicas para se Tornar um Ímã de Oportunidades</div>
-            <div class="benefit-item">✅ O Caminho para Criar Relacionamentos Inquebráveis</div>
-            <div class="benefit-item">✅ Métodos para Aumentar sua Resiliência Mental</div>
+        <section class="ebook-preview">
+            <img src="assets/capa.png" alt="Capa do E-book Sistema de Renovação Mental" class="ebook-cover">
+            <div>
+                <p>Não perca a oportunidade de transformar sua vida com apenas 10 minutos por dia. Este e-book é seu guia para uma jornada de 30 dias rumo a uma vida mais feliz e produtiva.</p>
+                <div id="countdown">Oferta especial termina em: 24:00:00</div>
+                <div class="cta-container">
+                    <a href="#" class="cta-button">SIM, QUERO COMEÇAR MINHA TRANSFORMAÇÃO!</a>
+                </div>
+            </div>
         </section>
-
-        <p>Não perca a oportunidade de transformar sua vida com apenas 10 minutos por dia. Este e-book é seu guia para uma jornada de 30 dias rumo a uma vida mais feliz e produtiva.</p>
-
-        <div id="countdown">Oferta especial termina em: 24:00:00</div>
-
-        <a href="#" class="cta-button">SIM, QUERO COMEÇAR MINHA TRANSFORMAÇÃO!</a>
     </main>
 
     <script src="script.js"></script>
