chore: add link to kiwifi

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>Este livro não é apenas uma leitura, mas uma experiência que convida você a embarcar em uma jornada de autodescoberta e transformação pessoal.</p>
 
             <div class="cta-container">
-                <a href="#" class="cta-button">QUERO TRANSFORMAR MINHA VIDA AGORA!</a>
+                <a href="https://pay.kiwify.com.br/r0tOZbj" class="cta-button">QUERO TRANSFORMAR MINHA VIDA AGORA!</a>
             </div>
 
             <div class="benefits">
@@ -77,7 +77,7 @@
                 <p>Não perca a oportunidade de transformar sua vida com apenas 10 minutos por dia. Este e-book é seu guia para uma jornada de 30 dias rumo a uma vida mais feliz e produtiva.</p>
                 <div id="countdown">Oferta especial termina em: 24:00:00</div>
                 <div class="cta-container">
-                    <a href="#" class="cta-button">SIM, QUERO COMEÇAR MINHA TRANSFORMAÇÃO!</a>
+                    <a href="https://pay.kiwify.com.br/r0tOZbj" class="cta-button">SIM, QUERO COMEÇAR MINHA TRANSFORMAÇÃO!</a>
                 </div>
             </div>
         </section>
